<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.elifakay.englishwordapp.RankingFragment">


    <android.support.v7.widget.CardView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/ranking"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7.37"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.66"
                android:text="@string/score"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rankingList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title">

    </android.support.v7.widget.RecyclerView>
</RelativeLayout>
