<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.elifakay.englishwordapp.PlayingActivity">

    <ImageView
        android:id="@+id/imgQuestion"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="200dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:layout_toStartOf="@+id/imgBtnTextToSpeech"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/group"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtScore"
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/_0"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/txtTotalQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/_1_30"
                    android:textAlignment="textEnd"
                    android:textColor="@color/textColor"
                    android:textSize="30sp" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:max="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAnswerA"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/buttonColor"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/answer_a"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:theme="@style/MyButton" />

            <Button
                android:id="@+id/btnAnswerB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/buttonColor"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/answer_b"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:theme="@style/MyButton" />

            <Button
                android:id="@+id/btnAnswerC"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/buttonColor"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/answer_c"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:theme="@style/MyButton" />

            <Button
                android:id="@+id/btnAnswerD"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/buttonColor"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/answer_d"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:theme="@style/MyButton" />

        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/imgBtnTextToSpeech"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/txtQuestion"
        android:layout_alignEnd="@+id/imgQuestion"
        android:background="@null"
        android:padding="5dp"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:srcCompat="@drawable/audio" />

</RelativeLayout>
